--- a/app/views/layouts/social.haml
+++ b/app/views/layouts/social.haml
@@ -5,13 +5,15 @@
     %meta{:name => "viewport", content: "width=device-width, initial-scale=1.0"}/
     %link{ rel: "stylesheet", :href => "https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" }/
     %script{ src: 'https://use.fontawesome.com/f4cbdb5826.js' }
+    - if defined?(vkontakte)
+      %script{ src: 'https://vk.com/js/api/openapi.js?117' }
     %title Hotspot
   %body
     .col-md-4.col-md-offset-4
       %main
         = yield
 
-- if try(:facebook)
+- if defined?(facebook)
   :javascript
     window.fbAsyncInit = function() {
       FB.init({
@@ -33,3 +35,6 @@
       js.src = "//connect.facebook.net/ru_RU/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+- elsif defined?(vkontakte)
+  :javascript
+    VK.init({apiId: "#{ENV['VK_KEY']}", onlyWidgets: true});
