--- a/app/views/widgets/vkontakte/post.haml
+++ b/app/views/widgets/vkontakte/post.haml
@@ -9,7 +9,7 @@
       %small= t(:today, time: Time.now.strftime('%H:%M'))
     %div= @company.vk.post_text
     %div
-      %img{ src: @company.vk.post_image_url, alt: @company.name, class: 'img-responsive' }
+      %img.img-responsive{ src: @company.vk.post_image_url, alt: @company.name }
   .panel-footer
     %a.btn.btn-primary.btn-block{ href: '/vkontakte/post' }
       = t('vkontakte.post.share')
